syntax = "proto3";

package onight.zjfae.afront.gensazj;

option java_outer_classname="WithdrawalsCoupon";

//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_kqWithdrawals{
	//
	message RemindS{
		string type = 1;	 //, 展示类型,Long,不校验,是,
		repeated Remind remindList=2;
	}
	
	message Remind{
		string content = 1;	 //,富文本内容,String,不校验,是,
		string distribution = 2;	 //,分发跳转,String,不校验,是,
		string iconUrl = 3;	 //,图片展示,Long,不校验,是,
		string chainUrl = 4;	 //,外链地址,Long,不校验,是,
		string isShare = 5;//是否分享,Long,不校验,是,
	}

	repeated RemindS remindSList = 1;


}

message Ret_PBAPP_kqWithdrawals{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_kqWithdrawals data=3;


}

message REQ_PBAPP_kqWithdrawals{
	//
		string isavailablekq=1;//是否可用卡券,(0:没有，1:使用)

}