syntax = "proto3";

package onight.zjfae.afront.gens;


option java_outer_classname="ChangeBankCardUpload";
//Generated By BrewRobot:Thu Dec 07 15:29:39 CST 2017

message PBIFE_bankcardmanage_changeBankCardUpload{
	///ife/bankcardmanage/changeBankCardUpload.html


}

message Ret_PBIFE_bankcardmanage_changeBankCardUpload{
	///ife/bankcardmanage/changeBankCardUpload.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_changeBankCardUpload data=3;


}

message REQ_PBIFE_bankcardmanage_changeBankCardUpload{
	///ife/bankcardmanage/changeBankCardUpload.html
	message NameAndPath{
  	   string fileNamesp = 1;	 //,参数键,String,不校验,是,
	   string filePath = 2;	 //,参数名/值,String,不校验,是,
	   string model = 3; //,模型排序,与核心一一对应，不校验，是
   }

	string fileName1 = 1; //,身份证正面附件名称	 String	200	否,

	string filePath1 = 2; //,身份证正面附件路径	String	2000	否,

	string fileName2 = 3; //,身份证背面附件名称	 String	200	否,

	string filePath2 = 4; //,身份证背面附件路径	 String	2000	否,

	string fileName3 = 5; //,手持身份证附件名称	  String 200	否,

	string filePath3 = 6; //,手持身份证附件路径	 String	2000	否

	string fileName4 = 7; //,银行卡流水单附件名称	String	200	是,

	string filePath4 = 8; //,银行卡流水单附件路径	String	2000 是,

	string businessType = 9; //,业务类型 String	不校验	否 changeCard,

	string applyChannel = 10; //,申请终端 String	不校验	否

	repeated NameAndPath nameAndPathList = 11;


}