syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="DeleteBankCard";
//Generated By BrewRobot:Wed Jan 31 15:10:06 CST 2018

message PBIFE_bankcardmanage_deleteBankCard{
	///ife/bankcardmanage/deleteBankCard.html

	string asynchronous = 1; //,是否异步,String,不校验,是,

	string serialNo = 2; //,流水号,String,不校验,是,


}

message Ret_PBIFE_bankcardmanage_deleteBankCard{
	///ife/bankcardmanage/deleteBankCard.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_deleteBankCard data=3;


}

message REQ_PBIFE_bankcardmanage_deleteBankCard{
	///ife/bankcardmanage/deleteBankCard.html

	string password = 1; //,交易密码,String,不校验,否,

	string payChannelNo = 2; //,支付渠道,String,不校验,否,

	string checkCode = 3; //,短信验证码,String,不校验,是,

	string checkCodeSerialNo = 4; //,短信验证码流水,String,不校验,是,

	string terminal = 5; //,操作终端,String,不校验,否,


}