syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="RegistrationSMS";

//Generated By BrewRobot:Wed Aug 30 10:59:46 CST 2017

message PBIFE_smsvalidatecode_activityRegistration{
	///ife/smsvalidatecode/activityRegistration.html


}

message Ret_PBIFE_smsvalidatecode_activityRegistration{
	///ife/smsvalidatecode/activityRegistration.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_smsvalidatecode_activityRegistration data=3;


}

message REQ_PBIFE_smsvalidatecode_activityRegistration{
	///ife/smsvalidatecode/activityRegistration.html

	string mobile = 1; //,手机号,String,不校验,否,

	string preText = 2; //,短信内容前部分,String,不校验,否,

	string suffixText = 3; //,短信内容后部分,String,不校验,否,

	string smsCode = 4; //,短信验证码,String,不校验,否,

	string md5Key = 5; //,短信验证码,String,不校验,否,
	
	string authCode = 6; // 图片验证码,String,不校验,否,
	
	string smsContent= 7; //短信内容,String,不校验,否,
	
	string token=8;//网易盾token,String,不校验,否,
	
	

}